add_executable(activities
               activity_cli.cpp
               activity.cpp
               activity_log.cpp
               cmd.cpp
               cmd_delete.cpp
               cmd_deleteall.cpp
               cmd_download.cpp
               cmd_downloadall.cpp
               cmd_edit.cpp
               cmd_get.cpp
               cmd_list.cpp
               cmd_plot.cpp
               cmd_stats.cpp
               cmd_track.cpp
               cmd_upload.cpp)

target_link_libraries(activities
                      activity_proto
                      activitylib)